--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
     <!-- main styles -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/global-styles.css">
@@ -20,10 +20,10 @@
         </a>
         <hr>
         <ul class="navbar c-white">
-            <li class="active"><a href="/index.html"><span>00</span> Home</a></li>
-            <li><a href="#"><span>01</span> Destination</a></li>
-            <li><a href="#"><span>02</span> Crew</a></li>
-            <li><a href="#"><span>03</span> Technology</a></li>
+            <li data-class="home"><a href="/index.html" ><span>00</span> Home</a></li>
+            <li data-class="destination"><a href="/destination.html" ><span>01</span> Destination</a></li>
+            <li data-class="crew"><a href="#"><span>02</span> Crew</a></li>
+            <li data-class="technology"><a href="#"><span>03</span> Technology</a></li>
         </ul>
         <img class="hamburger" src="assets/shared/icon-hamburger.svg" alt="">
     </div>
