--- a/destination.html
+++ b/destination.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/global-styles.css">
 </head>
 <body class="destination">
-        <div class="nav">
+    <div class="nav">
         <a href="#" class="logo">
             <img src="assets/shared/logo.svg" alt="">
         </a>
@@ -22,7 +22,7 @@
         <ul class="navbar c-white">
             <li data-class="home"><a href="/index.html" ><span>00</span> Home</a></li>
             <li data-class="destination"><a href="/destination.html" ><span>01</span> Destination</a></li>
-            <li data-class="crew"><a href="#"><span>02</span> Crew</a></li>
+            <li data-class="crew"><a href="/crew.html"><span>02</span> Crew</a></li>
             <li data-class="technology"><a href="#"><span>03</span> Technology</a></li>
         </ul>
         <img class="hamburger" src="assets/shared/icon-hamburger.svg" alt="">
@@ -39,7 +39,7 @@
         <div class="tab-container">
             <!-- tab content -->
             <div id="moon" class="tab-content">
-                <img src="assets/destination/image-moon.png" alt="">
+                <img class="planet" src="assets/destination/image-moon.png" alt="">
                 <div class="content">
                     <h2 class="c-white">MOON</h2>
                     <p class="c-second">See our planet as you&#x2019;ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you&#x2019;re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
@@ -58,7 +58,7 @@
             </div>
             <!-- tab content -->
             <div id="mars" class="tab-content">
-                <img src="assets/destination/image-mars.png" alt="">
+                <img class="planet" src="assets/destination/image-mars.png" alt="">
                 <div class="content">
                     <h2 class="c-white">MARS</h2>
                     <p class="c-second">Don&#x2019;t forget to pack your hiking boots. You&#x2019;ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It&#x2019;s two and a half times the size of Everest!</p>
@@ -77,7 +77,7 @@
             </div>
             <!-- tab content -->
             <div id="europa" class="tab-content">
-                <img src="assets/destination/image-europa.png" alt="">
+                <img class="planet" src="assets/destination/image-europa.png" alt="">
                 <div class="content">
                     <h2 class="c-white">EUROPA</h2>
                     <p class="c-second">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover&#x2019;s dream. With an icy surface, it&#x2019;s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.</p>
@@ -96,7 +96,7 @@
             </div>
             <!-- tab content -->
             <div id="titan" class="tab-content">
-                <img src="assets/destination/image-titan.png" alt="">
+                <img class="planet" src="assets/destination/image-titan.png" alt="">
                 <div class="content">
                     <h2 class="c-white">TITAN</h2>
                     <p class="c-second">The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
