--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="navbar c-white">
             <li data-class="home"><a href="/index.html" ><span>00</span> Home</a></li>
             <li data-class="destination"><a href="/destination.html" ><span>01</span> Destination</a></li>
-            <li data-class="crew"><a href="#"><span>02</span> Crew</a></li>
+            <li data-class="crew"><a href="/crew.html"><span>02</span> Crew</a></li>
             <li data-class="technology"><a href="#"><span>03</span> Technology</a></li>
         </ul>
         <img class="hamburger" src="assets/shared/icon-hamburger.svg" alt="">
@@ -33,7 +33,7 @@
             <h1 class="c-white">SPACE</h1>
             <p class="c-second">Let's face it: if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relaxe because we'll give you a truly out of this world experience.</p>
         </div>
-        <a href="#" class="explore">EXPLORE</a>
+        <a href="/destination.html" class="explore">EXPLORE</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="js/script.js"></script>
