--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Tourism</title>
+    <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,7 @@
             <li data-class="home"><a href="/index.html" ><span>00</span> Home</a></li>
             <li data-class="destination"><a href="/destination.html" ><span>01</span> Destination</a></li>
             <li data-class="crew"><a href="/crew.html"><span>02</span> Crew</a></li>
-            <li data-class="technology"><a href="#"><span>03</span> Technology</a></li>
+            <li data-class="technology"><a href="/technology.html"><span>03</span> Technology</a></li>
         </ul>
         <img class="hamburger" src="assets/shared/icon-hamburger.svg" alt="">
     </div>
@@ -35,6 +36,7 @@
         </div>
         <a href="/destination.html" class="explore">EXPLORE</a>
     </div>
+    <!-- js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
