--- a/destination.html
+++ b/destination.html
@@ -21,10 +21,10 @@
         </a>
         <hr>
         <ul class="navbar c-white">
-            <li data-class="home"><a href="/index.html" ><span>00</span> Home</a></li>
-            <li data-class="destination"><a href="/destination.html" ><span>01</span> Destination</a></li>
-            <li data-class="crew"><a href="/crew.html"><span>02</span> Crew</a></li>
-            <li data-class="technology"><a href="/technology.html"><span>03</span> Technology</a></li>
+            <li data-class="home"><a href="index.html" ><span>00</span> Home</a></li>
+            <li data-class="destination"><a href="destination.html" ><span>01</span> Destination</a></li>
+            <li data-class="crew"><a href="crew.html"><span>02</span> Crew</a></li>
+            <li data-class="technology"><a href="technology.html"><span>03</span> Technology</a></li>
         </ul>
         <img class="hamburger" src="assets/shared/icon-hamburger.svg" alt="">
     </div>
